force-app/main/default/objects/NS_AccountTeam__c/NS_AccountTeam__c.object-meta.xml
<CustomObject>
    <description>Norfolk Southern Account Team custom object</description>
    <label>NS Account Team</label>
    <nameField>
        <displayFormat>AT-{0000000}</displayFormat>
        <label>Account Team ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NS Account Teams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>