force-app/main/default/objects/NS_AccountTeam__c/fields/NS_Account__c.field-meta.xml
<CustomField>
    <fullName>NS_Account__c</fullName>
    <description>Related Account</description>
    <label>Account</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>Account must be an Active Account.</errorMessage>
        <filterItems>
            <field>Account.NS_StatusIndicator__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>NS Account Team</relationshipLabel>
    <relationshipName>Norfolk_Southern_Account_Team</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>