force-app/main/default/objects/NS_AccountTeam__c/fields/NS_AssignedToRegion__c.field-meta.xml
<CustomField>
    <fullName>NS_AssignedToRegion__c</fullName>
    <description>For Role of type &#39;OSS&#39;, it is a must have field.</description>
    <inlineHelpText>Select a Region when Role is &#39;OSS Region&#39;</inlineHelpText>
    <label>Assigned To Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Northern Region East  </fullName>
            </value>
            <value>
                <fullName>Northern Region West  </fullName>
            </value>
            <value>
                <fullName>Southern Region East  </fullName>
            </value>
            <value>
                <fullName>Southern Region West</fullName>
            </value>
            <value>
                <fullName>Offline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>