force-app/main/default/objects/NS_AccountTeam__c/fields/NS_AssignedToUser__c.field-meta.xml
<CustomField>
    <fullName>NS_AssignedToUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For role other than OSS, it is a must have field.</description>
    <inlineHelpText>Search for an user when Role is not &#39;OSS Region&#39;</inlineHelpText>
    <label>Assigned To User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Norfolk_Southern_Account_Team</relationshipName>
    <type>Lookup</type>
</CustomField>