force-app/main/default/objects/NS_AccountTeam__c/fields/NS_Email__c.field-meta.xml
<CustomField>
    <fullName>NS_Email__c</fullName>
    <description>Email of User</description>
    <formula>NS_AssignedToUser__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email</label>
    <type>Text</type>
</CustomField>