force-app/main/default/objects/NS_AccountTeam__c/fields/NS_Mobile__c.field-meta.xml
<CustomField>
    <fullName>NS_Mobile__c</fullName>
    <description>Mobile/Cell number of user</description>
    <formula>NS_AssignedToUser__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobile</label>
    <type>Text</type>
</CustomField>