force-app/main/default/objects/NS_AccountTeam__c/fields/NS_Phone__c.field-meta.xml
<CustomField>
    <fullName>NS_Phone__c</fullName>
    <description>Phone Number of user</description>
    <formula>NS_AssignedToUser__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone</label>
    <type>Text</type>
</CustomField>