force-app/main/default/objects/NS_AccountTeam__c/fields/NS_Role__c.field-meta.xml
<CustomField>
    <fullName>NS_Role__c</fullName>
    <description>Account Role</description>
    <inlineHelpText>Select a role</inlineHelpText>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automotive Rep</fullName>
            </value>
            <value>
                <fullName>Intermodal Premium Rep</fullName>
            </value>
            <value>
                <fullName>Marketing Manager</fullName>
            </value>
            <value>
                <fullName>OSS Region</fullName>
            </value>
            <value>
                <fullName>Revenue Accounting Traffic Rep</fullName>
            </value>
            <value>
                <fullName>Revenue Accounting Demurrage Rep</fullName>
            </value>
            <value>
                <fullName>Unit Train Rep</fullName>
            </value>
            <value>
                <fullName>Revenue Accounting Freight Rep</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>