force-app/main/default/objects/NS_AccountTeam__c/validationRules/NS_AssignedToUserBlankIfOSS.validationRule-meta.xml
<ValidationRule>
    <fullName>NS_AssignedToUserBlankIfOSS</fullName>
    <active>true</active>
    <description>If Role contains “OSS” then Assigned To User must be blank.</description>
    <errorConditionFormula>AND(NOT( NS_Account__r.RecordType.DeveloperName =&quot;NS_CustomerOffline&quot;), ISPICKVAL( NS_Role__c , &#39;OSS Region&#39;) ,  NOT(ISBLANK(NS_AssignedToUser__c )) )</errorConditionFormula>
    <errorMessage>Please enter the region, not the user, associated with this OSS role</errorMessage>
</ValidationRule>