force-app/main/default/objects/NS_AccountTeam__c/validationRules/NS_RequireAssignedToUserExceptOSS.validationRule-meta.xml
<ValidationRule>
    <fullName>NS_RequireAssignedToUserExceptOSS</fullName>
    <active>true</active>
    <description>If Role does not contain “OSS” then Assigned To User must be complete.</description>
    <errorConditionFormula>AND( NOT( NS_Account__r.RecordType.DeveloperName =&quot;NS_CustomerOffline&quot;),NOT(ISPICKVAL( NS_Role__c , &#39;OSS Region&#39;)),ISBLANK(  NS_AssignedToUser__c ) )</errorConditionFormula>
    <errorMessage>Please enter the user associated with this role</errorMessage>
</ValidationRule>