force-app/main/default/objects/NS_AccountTeam__c/validationRules/NS_RestrictOfflineRegionAssignment.validationRule-meta.xml
<ValidationRule>
    <fullName>NS_RestrictOfflineRegionAssignment</fullName>
    <active>true</active>
    <description>It will restrict Offline Region assignment if Account is not Offline.</description>
    <errorConditionFormula>AND(NOT(NS_Account__r.RecordType.DeveloperName=&quot;NS_OfflineCustomer&quot;),ISPICKVAL( NS_AssignedToRegion__c , &quot;Offline&quot;) )</errorConditionFormula>
    <errorMessage>Assigned To Region cannot be Offline for this customer</errorMessage>
</ValidationRule>